# bittensor

./: .circlci.yml  .coveragerc  .defaults.yaml.swp  .defaults2.yaml.swp  .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .test_durations  .travis.yml  1  Axon test.ipynb  CHANGELOG.md  CODE_REVIEW_DOCS.md  CONTRIBUTING.md  DELEGATES.md  DEVELOPMENT_WORKFLOW.md  Dockerfile  Dockerfile.base  LICENSE  MANIFEST.in  MIGRATION-GUIDE.md  MIGRATION.md  Makefile  Miner.ipynb  README.md  RELEASE_GUIDELINES.md  SECURITY.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  VERSION  adam_config.yaml  argparsetest.py  auto_run_bittensor.sh  auto_update.sh  bittensor.py  bittensor_pb2.py  (+48 more)
.circleci/: check_pr_status.sh  config.yml  create_default_wallet.sh
.github/: auto_assign.yml  dependabot.yml  pull_request_template.md  supported-python-versions.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.yaml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  feature_change.md  feature_change.yaml  performance_improvement.md  performance_improvement.yaml  pull_request_template.md
.github/workflows/: _run-e2e-single.yaml  auto-assign.yml  changelog-checker.yml  ci_build_tests.yml  compatibility.yml  config.yml  create_wallet.sh  (+18 more)
.ps_project/: config.yaml
benchmarks/: __init__.py  advanced_server.py  multitron_server.py  template_miner.py  template_server.py
bittensor/: __init__.py  __main__.py  axon.py  axon_terminal.py  bittensor.proto  bittensor_pb2.py  bittensor_pb2_grpc.py  bt_types.py  btlogging.py  chain_data.py  cli.py  cli_logging.py  config.ini  config.py  constants.py  crypto.py  dataloader.py  datasets.py  defaults.py  dendrite.py  errors.py  executor.py  keyfile.py  logging.py  metadata.py  metagraph.py  miner.py  neuron.py  neuronold.py  nucleus.py  protocol.py  receptor.py  router.py  serialization.py  serializer.py  session.py  settings.py  ss.py  stream.py  subnets.py  (+11 more)
bittensor_proto.egg-info/: PKG-INFO  SOURCES.txt
configs/: advanced_server_sample_config.txt  core_validator_sample_config.txt  sgmoe_validator_sample_config.txt  template_miner_sample_config.txt  template_server_sample_config.txt  template_validator_sample_config.txt
contrib/: CODE_REVIEW_DOCS.md  CONTRIBUTING.md  DEBUGGING.md  DEVELOPMENT_WORKFLOW.md  RELEASE_GUIDELINES.md  STYLE.md  TESTING.md
docs/: conf.py  index.rst  metagraph.html
examples/: all.py  bert_mlm.py  bert_nsp.py  cifar.py  client.py  ffnn_grunt.py  gpt2-genesis.py  gpt2-wiki.py  image_to_text.py  mnist.py  server.py  speech_to_text.py  stream_working.ipynb  stream_working_client.py  stream_working_server.py  text_prompting.py  text_prompting_medium.py  text_to_embedding.py  text_to_embedding_miner_example.py  text_to_image.py  text_to_speech.py
genesis_dataset/: bible_book_23.txt  bible_book_25.txt  bible_book_26.txt  bitcoin_whitepaper.txt  brief_history_of_time.txt  crypto_anarchist_manifesto.txt  cryptonomicon.txt  dantes_inferno.txt  four_noble_truths  god_is_not_great.txt  magna_carta.txt  masnavi.txt  rights_of_man.txt  rumi.txt  satanic_verses.txt  self_reliance.txt  shahnameh.txt  story_of_moot.txt  tao1.txt  upanishads.txt  why_i_write.txt
miners/: advanced_server.py  base_miner.py  bert_mlm.py  bert_nsp.py  config.yaml  core_server.py  core_validator.py  gpt2_genesis.py  miner.py  multitron_server.py  template_miner.py  template_server.py  validator.py  xlm.py
neurons/: adam.py  bert_mlm.py  bert_nsp.py  cifar.py  ffnn.py  ffnn_grunt.py  gpt2-wiki.py  mnist.py
notebooks/: GPT_model_inference.ipynb  Querying the Chain.ipynb  Untitled.ipynb  Untitled1.ipynb  bittensor_intro.ipynb  infer_trained_bittensor_model.ipynb  miner_swarm.ipynb
nuclei/: bert.py  dpn.py  ffnn.py  gpt2.py  huggingface_gpt.py  server.py  xlm.py
opentensor/: .__init__.py.swp  .__init__.py@neomake_145023_129.py  .axon.py.swp  .dendrite.py.swp  .identity.py.swp  .keys.py.swp  .metagraph.py.swp  .opentensor.proto.swp  __init__.py  axon.py  cache.py  config.py  dendrite.py  dispatcher.py  gate.py  gossip.py  identity.py  keys.py  metagraph.py  nat.py  neuron.py  node.py  opentensor.proto  opentensor.py  opentensor_pb2.py  opentensor_pb2_grpc.py  router.py  serializer.py  synapse.py
opentensor_proto/: __init__.py  opentensor.proto  opentensor_pb2.py  opentensor_pb2_grpc.py
requirements/: btcli.txt  cli.txt  cpu.txt  cubit.txt  dev.txt  prod.txt  torch.txt
routers/: pkm.py  router.py  sgmoe.py
sample_configs/: core_server_sample_config.txt  core_validator_sample_config.txt  memory_map.json
scratchpad/: asyncio_test.py  client_test.py  config.ini  config.py  config_test.py  configuration.ini  keys.py
scripts/: Dockerfile  bittensor.sh  build_protos.sh  check_compatibility.sh  check_git_vs_pypi.sh  check_pre_submit.sh  check_requirements.sh  check_requirements_changes.sh  constant.sh  create_wallet.sh  install.sh  installfedora.sh  launch_metagraph.py  launch_metagraph_standalone.sh  post_install_cli.py  push.sh  push_image.sh  run.sh  subprocess_utils.py  time-unit-tests.sh  update.sh  update_version.sh
source/: .conf.py.swp  .index.rst.swp  conf.py  index.rst
subtensor/: .gitignore  Cargo.toml  README.md  docker-compose.yml
subtensor/node/: Cargo.toml
subtensor/node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
subtensor/pallets/stake/: Cargo.toml
subtensor/pallets/stake/src/: lib.rs
subtensor/pallets/subtensor/: Cargo.toml
subtensor/pallets/subtensor/src/: lib.rs  mock.rs  tests.rs
subtensor/runtime/: Cargo.toml
subtensor/runtime/src/: lib.rs
synapses/: bert.py  dpn.py  ffnn.py  gpt2.py  huggingface_gpt.py  skeleton.py  xlm.py
testproto/: messages.proto  messages_pb2.py  messages_pb2_grpc.py  server.py
tests/: .test_crypto.py.swp  .test_serialization.py.swp  __init__.py  helpers.py  pytest.ini  test_config.py  test_crypto.py  test_dispatcher.py  test_protos.py  test_serialization.py  test_server.py  test_swarm.py  utils.py
tools/: capitalist.py  genkey.py  nat.py
tutorials/: Miner.ipynb
visualizer/: run.py
wandb/: latest-run
(+2228 files in other folders)
