[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bittensor"
version = "0.1.0"
description = "Bittensor"
readme = "README.md"
authors = [
    {email = "", name = "bittensor.com"}
]
license = "MIT"
requires-python = ">=3.9,<3.13"
dependencies = [
    "wheel",
    "setuptools~=70.0.0",
    "aiohttp~=3.9",
    "async-property==0.2.2",
    "bittensor-cli",
    "bt-decode==0.2.0a0",
    "colorama~=0.4.6",
    "fastapi~=0.110.1",
    "munch~=2.5.0",
    "numpy~=2.0.1",
    "msgpack-numpy-opentensor~=0.5.0",
    "nest_asyncio",
    "netaddr",
    "packaging",
    "python-statemachine~=2.1",
    "pycryptodome>=3.18.0,<4.0.0",
    "pyyaml",
    "retry",
    "requests",
    "rich",
    "pydantic>=2.3, <3",
    "python-Levenshtein",
    "scalecodec==1.2.11",
    "substrate-interface~=1.7.9",
    "uvicorn",
    "websockets>=14.1",
    "bittensor-wallet>=2.1.3"
]
scripts = ["bittensor/utils/certifi.sh"]

[project.optional-dependencies]
dev = [
    "pytest==7.2.0",
    "pytest-asyncio==0.23.7",
    "pytest-mock==3.12.0",
    "pytest-split==0.8.0",
    "pytest-xdist==3.0.2",
    "pytest-rerunfailures==10.2",
    "coveralls==3.3.1",
    "pytest-cov==4.0.0",
    "ddt==1.6.0",
    "hypothesis==6.81.1",
    "flake8==7.0.0",
    "mypy==1.8.0",
    "types-retry==0.9.9.4",
    "freezegun==1.5.0",
    "torch>=1.13.1",
    "httpx==0.27.0",
    "ruff==0.4.7",
    "aioresponses==0.7.6",
    "factory-boy==3.3.0",
]
torch = [
    "torch>=1.13.1"
]

[project.urls]
# more details can be found here
homepage = "https://github.com/opentensor/bittensor"

[tool.flit.metadata]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]